complete wedding invitation

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <h3>When: 3<sup>rd</sup> April 2021 </h3><br />
           <h3>Location: <a href="https://goo.gl/maps/dgvomkwBujhKmtZ76">Kamukuywa</a> </h3><br />
           <h3><u>M-PESA/Call (for gifts/Enquiry) </u></h3><br />
-          <h3><strong>0710 411 019</strong> (Bertha)</h3>
+          <h3><strong>07** *** ***</strong> (Bertha)</h3>
           <h3>- - - -</h3>
-          <h3><strong>0721 885 758</strong> (George)</h3>
+          <h3><strong>07** *** ***</strong> (George)</h3>
         </div>
         
         <div id="right">
